--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 
+<head> <link rel="stylesheet" href="mynewssite1.css"></head>
 
+<body>
 
-<p> hi Netlify</p>
+<div id ="nat">
+<p> hi All</p>
+</div>
+
+	</body>
 
 
 </html>
