--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <p> NationalNewsLine</p>
 </div>
 
-<div id ="nat1"> <p>Your eye on North American dis-integration</p>
+<div id ="nat1"> <p>Your Eye on North American Dis-integration</p>
 	</div>
 
 	</body>
