--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 
 <head> <link rel="stylesheet" href="mynewssite1.css"></head>
 
-<body>
+<body> 
 
-<div id ="nat">
+	<div class ="grid-container">
+		<div class="grid-item grid-item-1">
+
+
 <p> NationalNewsLine</p>
-</div>
+
 
 <div id ="nat1"> <p>Your Eye on North American Dis-integration</p>
 	</div>
