--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
 <body> 
 
 	<div class ="grid-container">
-		<div class="grid-item grid-item-1">
+		<div class="grid-item grid-item-1"></div>
+		<div class="grid-item grid-item-2"></div>
+<div class="grid-item grid-item-3"></div>
+<div class="grid-item grid-item-4"></div>
+</div>
+
 
 
 <p> NationalNewsLine</p>
 
 
-<div id ="nat1"> <p>Your Eye on North American Dis-integration</p>
-	</div>
 
 	</body>
 
