--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 
 <head> <link rel="stylesheet" href="mynewssite1.css"></head>
 
@@ -21,5 +21,5 @@
 
 
 </html>
-
+-->
 
