--- a/index.html
+++ b/index.html
@@ -62,8 +62,6 @@ style="background-image: url('IMG_3422.JPG')">6666
 </div>
 
 
-
-
 </body>
 </html>
 
@@ -75,7 +73,7 @@ style="background-image: url('IMG_3422.JPG')">6666
 
 
 
-<!--<!DOCTYPE html>
+<!DOCTYPE html>
 
 <head> <link rel="stylesheet" href="mynewssite1.css"></head>
 
@@ -98,5 +96,5 @@ style="background-image: url('IMG_3422.JPG')">6666
 
 
 </html>
--->
+
 
