--- a/index.html
+++ b/index.html
@@ -10,6 +10,63 @@
 	<title>photo</title>
 
 <link rel="stylesheet" href="photo-grid.css">
+	
+	
+	
+<style>
+
+ body { 
+
+	background-color:grey;
+
+}
+
+
+.photo-grid {
+
+
+	display: grid;
+	gap: 1rem;
+
+	
+
+	grid-template-columns:  repeat(auto-fit , minmax(240px,  1fr));  
+
+	grid-auto-rows: 240px;
+
+
+}
+
+
+@media screen and (min-width: 200px) { 
+
+.card-tall {
+
+	grid-row: span 2 / auto;
+
+}
+
+.card-wide {
+	grid-column: span 2 / auto;
+}
+}
+	
+	
+
+.card-five {
+
+	background-color: yellow;
+}
+
+}
+</style>
+
+	
+	
+	
+	
+	
+	
 
 </head>
 
