--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 
 
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,63 +8,12 @@
 	<title>photo</title>
 
 <link rel="stylesheet" href="photo-grid.css">
-	
-	
-	
-<style>
-
- body { 
-
-	background-color:grey;
-
-}
 
 
-.photo-grid {
 
 
-	display: grid;
-	gap: 1rem;
+cut here........
 
-	
-
-	grid-template-columns:  repeat(auto-fit , minmax(240px,  1fr));  
-
-	grid-auto-rows: 240px;
-
-
-}
-
-
-@media screen and (min-width: 200px) { 
-
-.card-tall {
-
-	grid-row: span 2 / auto;
-
-}
-
-.card-wide {
-	grid-column: span 2 / auto;
-}
-}
-	
-	
-
-.card-five {
-
-	background-color: yellow;
-}
-
-}
-</style>
-
-	
-	
-	
-	
-	
-	
 
 </head>
 
@@ -110,10 +57,13 @@ style="background-image: url('rival-sitorus-9U283eOPeBk-unsplash.jpg')">4
 <div class="card-five"
 
 style="background">5
+
 	 
 </div>
 
 </div>
+
+
 
 <!--
 // notice removed background pic and added yellow // 
@@ -129,11 +79,3 @@ style="background-image: url('IMG_3422.JPG')">6666
 
 </body>
 </html>
-
-
-
-
-
-
-
-
