--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@ cut here........
 // this content copied from photo-grid.html
 <style>
 
-/*
+
 	@import url ('./base.css');
 	@import url ('./base-grid.css');
-*/
+
 
 </style>
 
@@ -36,13 +36,13 @@ cut here........
 
 	<div class="card"
 
- style="background-image: url('IMG_winter_creek_small.JPG')">1
+ style="background-image: url('IMG_winter_creek_small.jpg')">1
 </div>
 <div class="card"
 
 
 
- style="background-image: url('IMG_3492 copy.JPG')">2
+ style="background-image: url('IMG_3492 copy.jpg')">2
 </div>
 <div class="card"
 
@@ -56,7 +56,7 @@ style="background-image: url('rival-sitorus-9U283eOPeBk-unsplash.jpg')">4
 
 <div class="card-five"
 
-style="background">5
+style="background-image: url('IMG_3492 copy.jpg')">5
 
 	 
 </div>
@@ -65,15 +65,15 @@ style="background">5
 
 
 
-<!--
+
 // notice removed background pic and added yellow // 
 
 <div class="card"
 
-style="background-image: url('IMG_3422.JPG')">6666
+style="">6666
 	 
 </div>
--->
+
 
 
 
