--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ style="background-image: url('rival-sitorus-9U283eOPeBk-unsplash.jpg')">4
 
 <div class="card-five"
 
-style="background-image: url('IMG_3492 copy.jpg')">5
+style="background-image: url('')">5
 
 	 
 </div>
