--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@ cut here........
 
 	<div class="card"
 
- style="background-image: url('IMG_winter_creek_small.jpg')">1
+ style="background-image: url('img_winter_creek_small.jpg')">1
 </div>
 <div class="card"
 
 
 
- style="background-image: url('IMG_3492 copy.jpg')">2
+ style="background-image: url('img_3492_copy.jpg')">2
 </div>
 <div class="card"
 
-style="background-image: url('IMG_3703.jpg')">3
+style="background-image: url('img_3703.jpg')">3
 	 
 </div>
 <div class="card"
