--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ style="background-image: url('')">5
 
 
 
-// notice removed background pic and added yellow // 
+// notice removed background pic and added red // 
 
 <div class="card"
 
