--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ cut here........
 </div>
 <div class="card"
 
-style="background-image: url('img_3703.jpg')">3
+style="background-image: url('img_3703.jpg')">
 	 
 </div>
 <div class="card"
