--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 
 <link rel="stylesheet" href="photo-grid.css">
 
+	
+	<img src="img_3703.jpg" alt="HTML tutorial" style="width:42px;height:42px;">
+	
+	
+	
 <!--
 
 
