--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@ cut here........
 
 	<div class="card"
 
- style="background-image: url('IMG_winter_creek_small.jpg')">1
+ style="background-image: url('img_winter_creek_small.jpg')">1
 </div>
 <div class="card"
 
 
 
- style="background-image: url('IMG_3492 copy.jpg')">2
+ style="background-image: url('img_3492 copy.jpg')">2
 </div>
 <div class="card"
 
