--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ cut here........
 </div>
 <div class="card"
 
-style="background-image: url('img_3703.jpg')">
+style="background-image: url('img_3703.jpg')">3
 	 
 </div>
 <div class="card"
