--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 <link rel="stylesheet" href="photo-grid.css">
 
 	
-	<img src="img_3703.jpg" alt="HTML tutorial" style="width:42px;height:42px;">
+	<img src="img_3703.jpg" alt="HTML tutorial" style="width:42px height:42px;">
 	
+	
+	<img src='img_winter_creek_small.jpg' alt="html tutorial" style ="width: 30px; height: 30px;">	
 	
 
 cut here........
