--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="photo-grid.css">
 
 	
-	<img src="img_3703.jpg" alt="HTML tutorial" width="42" height="42">
+	<img src="img_3703.jpg" alt="HTML tutorial" width="42" height="42"/>
 	
 	
 	<img src='img_winter_creek_small.jpg' alt="html tutorial" style ="width: 30px; height: 30px;">	
