--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<img src="img_3703.jpg" alt="HTML tutorial" width="42" height="42"/>
 	
 	
-	<img src='img_winter_creek_small.jpg' alt="html tutorial" style ="width: 30px; height: 30px;">	
+	<img src='img_winter_creek_small.jpg' alt="html tutorial" width="30px" heigth="30px"/>	
 	
 
 cut here........
