--- a/index.html
+++ b/index.html
@@ -45,7 +45,10 @@ cut here........
 <div class="card"
 
 
-
+     <div class="mypic"></div>
+	 
+	
+	
  style="background-image: url('img_3492 copy.jpg')">2
 </div>
 <div class="card"
