--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
 	<img src="img_3703.jpg" alt="HTML tutorial" width="342" height="42"/>
 	
 	
-	<img src='img_winter_creek_small.jpg' alt="html tutorial" width="30px" heigth="30px"/>	
 	
 
-cut here........
+cut here.in.......
 
 
 </head>
