--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 	
 	
 
-cut here.in.......
 
 
 </head>
@@ -76,7 +75,7 @@ style="background-image: url('')">5
 
 <div class="card"
 
-style="">6666555555
+style="">
 	 
 </div>
 
