--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
 
 </head>
-<!--
+	
+	
 // this content copied from photo-grid.html
 <style>
 
@@ -23,7 +24,7 @@
 
 </style>
 
--->
+
 
 <body>
 
@@ -32,7 +33,7 @@
 
 <div class="photo-grid">
 
-	<div class="card"
+	<div class="card">
 
  style="background-image: url('img_winter_creek_small.jpg')">1
 </div>
