--- a/index.html
+++ b/index.html
@@ -62,17 +62,13 @@ style="background-image: url('')">5
 </div>
 
 
-
-
 // notice removed background pic and added red // 
 
 <div class="card"
 
-style="">
+style="background-image: url('')">6
 	 
 </div>
-
-
 
 
 </body>
