--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@ style="background-image: url('img_3492 copy.jpg')">5
 style="background-image: url('')">6
 	 
 </div>
+	
+<div class="card"
+
+style="background-image: url('rival-sitorus-9U283eOPeBk-unsplash.jpg')">7
+</div>
 
 </div>
 
