--- a/index.html
+++ b/index.html
@@ -68,7 +68,20 @@ style="background-image: url('')">6
 
 style="background-image: url('rival-sitorus-9U283eOPeBk-unsplash.jpg')">7
 </div>
+	
+	<div class="card"
 
+style="background-image: url('rival-sitorus-9U283eOPeBk-unsplash.jpg')">8
+</div>
+<div class="card"
+
+style="background-image: url('rival-sitorus-9U283eOPeBk-unsplash.jpg')">9
+</div>
+	<div class="card"
+
+style="background-image: url('rival-sitorus-9U283eOPeBk-unsplash.jpg')">10
+</div>
+	
 </div>
 
 </body>
