--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <div class="card"
 	 
 	
- style="background-image: url('img_3492copy.jpg')">2
+ style="background-image: url('img_3492_copy.jpg')">2
 </div>
 <div class="card"
 
@@ -54,7 +54,7 @@ style="background-image: url('rival-sitorus-9U283eOPeBk-unsplash.jpg')">4
 
 <div class="card-five"
 
-style="background-image: url('img_3492copy.jpg')">5
+style="background-image: url('img_3492_copy.jpg')">5
  
 </div>
 
