--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@ style="background-image: url('img_3492_copy.jpg')">5
 
 <div class="card"
 
-style="background-image: url('The place is here')">6
-	 
+style="background-image: url('')">There is space here to put the necessay content to inform all	 
 </div>
 	
 <div class="card"
