--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@ style="background-image: url('rival-sitorus-9U283eOPeBk-unsplash.jpg')">8
 
 style="background-image: url('rival-sitorus-9U283eOPeBk-unsplash.jpg')">9
 </div>
-<!--	<div class="card"
+	<div class="card"
 
 style="background-image: url('rival-sitorus-9U283eOPeBk-unsplash.jpg')">10
 </div>
-	-->
+	
 </div>
 
 </body>
