--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 <body>
 
 
-<h1>NATIONAL NEWSLINE</h1>
 
 <div class="photo-grid">
 
 	<div class="card"
 
- style="background-image: url('img_winter_creek_small.jpg')">1
+ style="background-image: url('img_winter_creek_small.jpg')">
+<h1>NATIONAL NEWSLINE</h1>
 </div>
 <div class="card"
 	 
