--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<div class="card"
 
  style="background-image: url('img_winter_creek_small.jpg')">
-<h1>NATIONAL NEWSLINE</h1>
+<h1>NATIONAL NEWSLINE</h1><h3>Your Eye on North American Dis-Integration</h3>
 </div>
 <div class="card"
 	 
@@ -47,7 +47,7 @@ style="background-image: url('img_3703.jpg')">3
 </div>
 <div class="card"
 
-style="background-image: url('rival-sitorus-9U283eOPeBk-unsplash.jpg')"><h3>Your Eye on North American Dis-Integration</h3>
+style="background-image: url('rival-sitorus-9U283eOPeBk-unsplash.jpg')">
 </div>
 
 <div class="card"
