--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<div class="card"
 
  style="background-image: url('img_winter_creek_small.jpg')">
-<h1>NATIONAL NEWSLINE</h1><h3>Your Eye on North American Dis-Integration</h3>
+<h1>NATIONAL NEWSLINE</h1><h3>Your Eye on North American Dis-IntegrationPP</h3>
 </div>
 <div class="card"
 	 
