--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
 	<div class="card"
 
  style="background-image: url('img_winter_creek_small.jpg')">
-<h1>NATIONAL NEWSLINE</h1>
+
 </div>
 <div class="card"
 	 
 	
- style="background-image: url('img_3492_copy.jpg')">2
+ style="background-image: url('img_3492_copy.jpg')">2<h1>NATIONAL NEWSLINE</h1>
 </div>
 <div class="card"
 
@@ -47,12 +47,12 @@ style="background-image: url('img_3703.jpg')">3
 </div>
 <div class="card"
 
-style="background-image: url('rival-sitorus-9U283eOPeBk-unsplash.jpg')"><h3>Your Eye on North American Dis-Integration</h3>
+style="background-image: url('rival-sitorus-9U283eOPeBk-unsplash.jpg')">
 </div>
 
 <div class="card"
 
-style="background-image: url('img_3492_copy.jpg')">5
+style="background-image: url('img_3492_copy.jpg')">5<h3>Your Eye on North American Dis-Integration</h3>
  
 </div>
 
