--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
 
 	<div class="card"
 
- style="background-image: url('img_winter_creek_small.jpg')">
+ style="background-image: url('img_winter_creek_small.jpg')">1
 
 </div>
 <div class="card"
 	 
 	
- style="background-image: url('img_3492_copy.jpg')">2<h1>NATIONAL NEWSLINE</h1>
+ style="background-image: url('img_3492_copy.jpg')"><h1>NATIONAL NEWSLINE</h1>
 </div>
 <div class="card"
 
@@ -47,12 +47,12 @@ style="background-image: url('img_3703.jpg')">3
 </div>
 <div class="card"
 
-style="background-image: url('rival-sitorus-9U283eOPeBk-unsplash.jpg')">
+style="background-image: url('rival-sitorus-9U283eOPeBk-unsplash.jpg')">4
 </div>
 
 <div class="card"
 
-style="background-image: url('img_3492_copy.jpg')">5<h3>Your Eye on North American Dis-Integration</h3>
+style="background-image: url('img_3492_copy.jpg')"><h3>Your Eye on North American Dis-Integration</h3>
  
 </div>
 
