--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
 
 	<div class="card"
 
- style="background-image: url('img_winter_creek_small.jpg')">1
+ style="background-image: url('img_winter_creek_small.jpg')"><h1>NATIONAL NEWSLINE</h1>
 
 </div>
 <div class="card"
 	 
 	
- style="background-image: url('img_3492_copy.jpg')"><h1>NATIONAL NEWSLINE</h1>
+ style="background-image: url('img_3492_copy.jpg')"><h3>Your Eye on North American Dis-Integration</h3>
 </div>
 <div class="card"
 
@@ -52,7 +52,7 @@ style="background-image: url('rival-sitorus-9U283eOPeBk-unsplash.jpg')">4
 
 <div class="card"
 
-style="background-image: url('img_3492_copy.jpg')"><h3>Your Eye on North American Dis-Integration</h3>
+style="background-image: url('img_3492_copy.jpg')">
  
 </div>
 
