--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ style="background-image: url('img_3492_copy.jpg')">
 
 <div class="card"
 
-style="background-image: url('')">There is space here to put the necessay content to inform all	 
+style="background-image: url('')">Pathway to Democracy	 
 </div>
 	
 <div class="card"
