--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <div class="card"
 	 
 	
- style="background-image: url('img_3492_copy.jpg')"><h3>Your Eye on North American Dis-Integration</h3>
+ style="background-image: url('img_3492_copy.jpg')"><h3>Your Information Hub on North American Dis-Integration</h3>
 </div>
 <div class="card"
 
