--- a/index.html
+++ b/index.html
@@ -37,11 +37,14 @@
 </div>
 <div class="card"
 	 
+     
 	
  style="background-image: url('img_3492_copy.jpg')"><h3>Your Information Hub on North American Dis-Integration</h3>
 </div>
 <div class="card"
 
+     <div id="mythirdone></dvi>
+     
 style="background-image: url('img_3703.jpg')">3
 	 
 </div>
