--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
      
 style="background-image: url('img_3703.jpg')">3
 	 
-</div>
+	</div></div>
 <div class="card"
 
 style="background-image: url('rival-sitorus-9U283eOPeBk-unsplash.jpg')">4
