--- a/index.html
+++ b/index.html
@@ -43,11 +43,14 @@
 </div>
 <div class="card"
 
-     <div id="mythirdone></dvi>
      
 style="background-image: url('img_3703.jpg')">3
 	 
-	</div></div>
+	</div>
+	
+	
+     <div id="mythirdone></dvi>
+	
 <div class="card"
 
 style="background-image: url('rival-sitorus-9U283eOPeBk-unsplash.jpg')">4
