--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@ style="background-image: url('img_3492_copy.jpg')">
 
 <!--
 
+
+     <div id="mythirdone></dvi>
+
 <div class="card"
 
 style="background-image: url('')">Pathway to Democracy	 
