--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ style="background-image: url('img_3703.jpg')">3
 	
 <div class="card"
 
-style="background-image: url('rival-sitorus-9U283eOPeBk-unsplash.jpg')">4
+style="background-image: url('rival-sitorus-9U283eOPeBk-unsplash.jpg')">4 loremfmerrmviiririvemkmfmkmfdkmdfmkfdkmdkmvdkmvdfmkfmkmkdfkmdkmkmdfkdfkmkdkdkkmvmeremmvmkcmkvdmkdkmvfkmfkmmkdfdfkm
 </div>
 
 <div class="card"
