--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@ style="background-image: url('img_3703.jpg')">3
 	
 <div class="card"
 
-style="background-image: url('rival-sitorus-9U283eOPeBk-unsplash.jpg')">4 loremfmerrmviiririvemkmfmkmfdkmdfmkfdkmdkmvdkmvdfmkfmkmkdfkmdkmkmdfkdfkmkdkdkkmvmeremmvmkcmkvdmkdkmvfkmfkmmkdfdfkm
-loremfmerrmviiririvemkmfmkmfdkmdfmkfdkmdkmvdkmvdfmkfmkmkdfkmdkmkmdfkdfkmkdkdkkmvmerem</div>
+style="background-image: url('rival-sitorus-9U283eOPeBk-unsplash.jpg')">4 <p>loremfmerrmviiririvemkmfmkmfdkmdfmkfdkmdkmvdkmvdfmkfmkmkdfkmdkmkmdfkdfkmkdkdkkmvmeremmvmkcmkvdmkdkmvfkmfkmmkdfdfkm
+	loremfmerrmviiririvemkmfmkmfdkmdfmkfdkmdkmvdkmvdfmkfmkmkdfkmdkmkmdfkdfkmkdkdkkmvmerem</p></div>
 
 <div class="card"
      
