--- a/index.html
+++ b/index.html
@@ -86,8 +86,7 @@ style="background-image: url('rival-sitorus-9U283eOPeBk-unsplash.jpg')">9
 style="background-image: url('rival-sitorus-9U283eOPeBk-unsplash.jpg')">10
 </div>
 	
- 
-
+<src img="img_3492_copy.jpg" height="40px" width="40px>
 
 
 </div>
