--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ style="background-image: url('rival-sitorus-9U283eOPeBk-unsplash.jpg')">4 <p>lor
 
 <div class="card"
      
-    
+    <img src="img_3703.jpg" height="50px" width="50px">
 
 style="background-image: url('img_3492_copy.jpg')">
  
