--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ style="background-image: url('rival-sitorus-9U283eOPeBk-unsplash.jpg')">4 <p>lor
      
     <a href="https://www.wsj.com/">Visit Wall Street journal</a>
 
- style="background-image: url('img_3492_copy.jpg')">
+ style="background-image: url('img_3492_copy.jpg')">nn
  
 	
 </div>
