--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ style="background-image: url('rival-sitorus-9U283eOPeBk-unsplash.jpg')">4 <p>lor
 
 <div class="card"
      
-    <a href="https://www.wsj.com/">Wall Street journal</a>
+    <a href="https://www.aol.com/">Wall Street Journal</a>
 	
 </div>
 
