--- a/index.html
+++ b/index.html
@@ -93,7 +93,11 @@ style="background-image: url('rival-sitorus-9U283eOPeBk-unsplash.jpg')">10
 
 </div>
 	
-	<div id="samplehere"></div>
+	<div id="samplehere">
+
+    <a href="https://www.nypost/">Wall Street Journal</a>
+
+</div>
 
 </body>
 </html>
