--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ style="background-image: url('rival-sitorus-9U283eOPeBk-unsplash.jpg')">10
 	
 	<div id="samplehere">
 
-    <a href="https://www.nypost/">Wall Street Journal</a>
+    <a href="https://www.nypost">Wall Street Journal</a>
 
 </div>
 
