--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ style="background-image: url('rival-sitorus-9U283eOPeBk-unsplash.jpg')">4 <p>lor
 
 <div class="card"
      
-    <a href="https://www.nypost/">Wall Street Journal</a>
+    <a href="https://www.wallstreetjournal.com">Wall Street Journal</a>
 	
 </div>
 
@@ -95,7 +95,7 @@ style="background-image: url('rival-sitorus-9U283eOPeBk-unsplash.jpg')">10
 	
 	<div id="samplehere">
 
-    <a href="https://www.nypost">Wall Street Journal</a>
+    <a href="https://www.nypost.com">New York Post</a>
 
 </div>
 
