--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </div>
 <div class="card"
 
-     
+      <a href="https://www.nypost.com">New York Post</a>
 style="background-image: url('img_3703.jpg')">3
 	 
 	</div>
