--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ style="background-image: url('rival-sitorus-9U283eOPeBk-unsplash.jpg')">4 <p>lor
 
 <div class="card"
 
-style="background-image: url('')">Pathway to Democracy	 
+style="background-image: url('')">Pathway to Democracy.....mmmmmmmmmmmmmmmmmmmmmmmmerrvurvrevnrenvrnvdnioewiewuwuennvenjvjnjnewnjwenewweniweinnn
 </div>
 	
 <div class="card"
