--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
 
 	<div class="card"
 
- style="background-image: url('img_winter_creek_small.jpg')"><h1>NATIONAL NEWSLINE</h1>
+ style="background-image: url('img_winter_creek_small.jpg')"><h1>NATIONAL NEWSLINE</h1><h3>  Tracking North American Dis-Integration</h3>
 
 </div>
 <div class="card"
 	 
      
 	
- style="background-image: url('img_3492_copy.jpg')"><h3>Tracking North American Dis-Integration</h3>
+ style="background-image: url('img_3492_copy.jpg')">
 </div>
 <div class="card"
 
