--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<div class="grid-item grid-item-1" <h1>NATIONAL NEWSLINE</h1</div>
 	<div class="grid-item grid-item-2" <h3>  Tracking North American Dis-Integration</h3> </div>
 	<div class="grid-item grid-item-3"</div>
-	<div class="grid-item grid-item-4"<a href="https://www.nypost.com">New York Post</a> </div>
+	<div class="grid-item grid-item-4"</div><a href="https://www.nypost.com">New York Post</a> </div>
 	
 	
 	<div class="grid-item grid-item-5"</div>
