--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	<div class="grid-item grid-item-3" <h2>Hi</h2></div> 
 	<div class="grid-item grid-item-4"</div><a href="https://www.nypost.com">New York Post</a> </div>
 	<div class="grid-item grid-item-5"</div><a href="https://www.nypost.com">New York Post</a> </div>
-	<div class="grid-item grid-item-6"</div>
+	<div class="grid-item grid-item-6"</div><h2>Hi</h2></div> 
 	<div class="grid-item grid-item-7"</div>
 	<div class="grid-item grid-item-8"</div>
 	<div class="grid-item grid-item-9"</div>
