--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	<div class="grid-item grid-item-5"5</div><a href="https://www.nypost.com">New York Post</a> </div>
 	<div class="grid-item grid-item-6"6</div><h2>Hi</h2></div> 
 	<div class="grid-item grid-item-7"7</div></div><h2>Hi</h2></div> 
-	<div class="grid-item grid-item-8"8</div>
+	<div class="grid-item grid-item-8"8</div></div><h2>Hi</h2></div> 
 	
 </div>	
 
