--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<div class="grid-item grid-item-1"1 <h1>NATIONAL NEWSLINE</h1></div>
 	<div class="grid-item grid-item-2" 2<h3>  Tracking North American Dis-Integration</h3> </div>
 	<div class="grid-item grid-item-3" 3<h2>Hi</h2></div> 
-	<div class="grid-item grid-item-4"4</div><a href="https://www.nypost.com">New York Post</a> </div>
+	<div class="grid-item grid-item-4"4 <a href="https://www.nypost.com">New York Post</a> </div>
 	<div class="grid-item grid-item-5"5</div><a href="https://www.nypost.com">New York Post</a> </div>
 	<div class="grid-item grid-item-6"6</div><h2>Hi</h2></div> 
 	<div class="grid-item grid-item-7"7</div></div><h2>Hi</h2></div> 
