--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	<div class="grid-item grid-item-3" 3<h2>Hi</h2></div> 
 	<div class="grid-item grid-item-4"4 <a href="https://www.nypost.com">New York Post</a> </div>
 	<div class="grid-item grid-item-5"5 <a href="https://www.nypost.com">New York Post</a> </div>
-	<div class="grid-item grid-item-6"6</div><h2>Hi</h2></div> 
+	<div class="grid-item grid-item-6"6 <h2>Hi</h2></div> 
 	<div class="grid-item grid-item-7"7</div></div><h2>Hi</h2></div> 
 	<div class="grid-item grid-item-8"8</div></div><h2>Hi</h2></div> 
 	
