--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 	<div class="grid-item grid-item-6"6 <h2>Hi</h2></div> 
 	<div class="grid-item grid-item-7"7 <h2>Hi</h2></div> 
 	<div class="grid-item grid-item-8"8 <h2>Hi</h2></div> 
+	<div class="grid-item grid-item-8"8 <h2>Hi</h2></div> 
 	
 </div>	
 
