--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
 <div class="photo-grid">
 
-	<div class="grid-item grid-item-1"1 <h1>NATIONAL NEWSLINE</h1> <h3>Tracking North American Dis-Integration</h3></div>
-	<div class="grid-item grid-item-2" 2 </div>
+	<div class="grid-item grid-item-1"1 <h1>NATIONAL NEWSLINE</h1></div>
+	<div class="grid-item grid-item-2" 2 <h3>Tracking North American Dis-Integration</h3> </div>
 	<div class="grid-item grid-item-3" 3<h2>Hi</h2></div> 
 	<div class="grid-item grid-item-4"4 <a href="https://www.nypost.com">New York Post</a> </div>
 	<div class="grid-item grid-item-5"5 <a href="https://www.nypost.com">New York Post</a> </div>
