--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<div class="grid-item grid-item-1">1</div>
 	<div class="grid-item grid-item-2" 2  <h1>NATIONAL NEWSLINE</h1><span><h5>Tracking North American Dis-Integration</h5></span></div>
 	<div class="grid-item grid-item-3" 3<h2><a href="https://www.newcaliforniastate.com">New California</a></h2></div> 
-	<div class="grid-item grid-item-4"4 <a href="https://www.nypost.com">New York Post</a> </div>
+	<div class="grid-item grid-item-4"4 <a href="https://www.wsj.com">New York Post</a> </div>
 	<div class="grid-item grid-item-5"5 <a href="https://www.nypost.com">New York Post</a> </div>
 	<div class="grid-item grid-item-6"6 <h2>Hi</h2></div> 
 	<div class="grid-item grid-item-7"7 <h2>Hi</h2></div> 
