--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<div class="grid-item grid-item-2" 2  <h1>NATIONAL NEWSLINE</h1><span><h5>Tracking North American Dis-Integration</h5></span></div>
 	<div class="grid-item grid-item-3" 3<h2><a href="https://www.newcaliforniastate.com">New California</a></h2></div> 
 	<div class="grid-item grid-item-4"4 <h6> <a href="https://www.wsj.com">WSJ</a><h6></div>
-	<div class="grid-item grid-item-5"5 <a href="https://www.nypost.com">Biden's 11 Million Units of Corruption</a> </div>
+	<div class="grid-item grid-item-5"5 <h2><a href="https://www.nypost.com">Biden's 11 Million Units of Corruption</a></h2> </div>
 	<div class="grid-item grid-item-6"6 <h2>Hi</h2></div> 
 	<div class="grid-item grid-item-7"7 <h2>Hi</h2></div> 
 	<div class="grid-item grid-item-8"8 <h2>Hi</h2></div> 
