--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <div class="photo-grid">
 
-	<div class="grid-item grid-item-1" 1 <h1>NATIONAL NEWSLINE</h1><h5>.........Tracking North American Dis-Integration</h5></div>
+	<div class="grid-item grid-item-1" 1 <h1>NATIONAL NEWSLINE</h1><br><h5>.........Tracking North American Dis-Integration</h5></div>
 	<div class="grid-item grid-item-2"> 2 </div>
 	<div class="grid-item grid-item-3" 3<h2><a href="https://www.newcaliforniastate.com">New California</a></h2></div> 
 	<div class="grid-item grid-item-4"4 <h6> <a href="https://www.wsj.com">WSJ</a><h6></div>
