--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 
 
 <div class="photo-grid">
-
+	
+	<div class="phot-grid" <img src="img_3797.jpg" alt="map" width="300" height="200">
 	<div class="grid-item grid-item-1" 1 <h1>NATIONAL NEWSLINE</h1><h5>............Tracking North American Dis-Integration</h5></div>
 	<div class="grid-item grid-item-2"> 2 <img src="img_3797.jpg" alt="map" width="300" height="200"></div>
 	<div class="grid-item grid-item-3" 3<h2><a href="https://www.newcaliforniastate.com">New California</a></h2></div> 
