--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	<div class="grid-item grid-item-6"6 <h1>Does Canada Need A New Flag?</h1></div> 
 	<div class="grid-item grid-item-7"7 <h2><a href="https://youtu.be/OuF9weSkS68">Apple vid</a></h2></div> 
 	<div class="grid-item grid-item-8"8 <h2><a href="https://www.nypost.com">NyPost</a></h2></div> 
-	<div class="grid-item grid-item-8"9 <h2>Hi 9</h2></div>
+	<div class="grid-item grid-item-8">img src="canadaflags.jpg" width="200 height="200"></div>
 	
 </div>	
 
