--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 	<div class="grid-item grid-item-7"7 <h2><a href="https://youtu.be/OuF9weSkS68">Apple vid</a></h2></div> 
 	<div class="grid-item grid-item-8"8 <h2><a href="https://www.nypost.com">NyPost</a></h2></div> 
 	nationalnsln@gmail.com
-	<div class="grid-item grid-item-8"><img src="/mynewssite2.html/img_3797.jpg" width="200" height="200"/></div>
+	<div class="grid-item grid-item-8"><img src="/mynewssite2.html/img_3797.jpg" width="200" height="200"/>
+<input ="email" id="myid" name="email"/>  </div>
 	
 </div>	
 
