--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
 	<div id="grid-item grid-item-6A"<h2><a href="https://vancouversun.com/news/staff-blogs/the-dangers-of-trudeaus-postnational-canada">Canada: The Post-National State</a><h/2></div>
 	<div class="grid-item grid-item-6"6 <h1><a href="https://thelapine.ca/harper-unveils-subtle-changes-to-canadian-flag/">Does Canada Need A New Flag?</a></h1></div> 
 	
-	<div class="grid-item grid-item-7"7 <h2><a href="https://pq.org/">The Parti Quebecois: North America's first elected separatist party</a></h2></div> 
-	<div class="grid-item grid-item-8"8 <h2><a href="https://buchanan.org/blog/the-dc-statehood-power-grab-149601">Will D.C. Fall?</a></h2></div> 
+	<div class="grid-item grid-item-7"7 <h2><a href="https://buchanan.org/blog/the-dc-statehood-power-grab-149601">
+		Will DC Fall?</a></h2></div> 
+	<div class="grid-item grid-item-8"8 <h2><a href="The Parti Quebecois: North America's first elected separatist party">Will D.C. Fall?</a></h2></div> 
 	<a href="mailto:nationalnsln@gmail.com">contact: Nationalnewsline</a>
 	<div class="grid-item grid-item-8"><img src="/mynewssite2.html/img_3797.jpg" width="200" height="200">
  </div>
