--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <div class="photo-grid">
 	
-	<div class="grid-item grid-item-1"1 <h1><p style="color:red;">NATIONAL NEWSLINE</p></h1><h5>............>Tracking North American Dis-Integration</h5></div>
+	<div class="grid-item grid-item-1"1 <h1><p style="color:red;">NATIONAL NEWSLINE</p></h1><h5>............Tracking North American Dis-Integration</h5></div>
 	<div class="grid-item grid-item-2"2 <h3><a href="http://laalmanac.com/immigration/im04c.php">City state: The sanctuary movement</a></h3></div>
 	<div class="grid-item grid-item-3"3 <h2><a href="https://www.newcaliforniastate.com/">New California</a></h2></div> 
 	<div class="grid-item grid-item-4"4 <h6> <a href="https://www.borderreport.com/">Mexican Border Chaos</a><h6></div>
