--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	
 	<div class="grid-item grid-item-7"7 <h2><a href="https://buchanan.org/blog/the-dc-statehood-power-grab-149601">
 		Will DC Fall?</a></h2></div> 
-	<div class="grid-item grid-item-8"8 <h2><a href="https://pq.org">The Parti Quebecois: North America's first elected separatist party</a></h2></div> 
+	<div class="grid-item grid-item-8"8 <h2><a href="https://pq.org">The Parti Quebecois: North America's first elected separatist party (pardon the French)</a></h2></div> 
 	<a href="mailto:nationalnsln@gmail.com">contact: Nationalnewsline</a>
 	<div class="grid-item grid-item-8"><img src="/mynewssite2.html/img_3797.jpg" width="200" height="200">
  </div>
