--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	<div class="grid-item grid-item-6"6 <h1><a href="https://thelapine.ca/harper-unveils-subtle-changes-to-canadian-flag/">Does Canada Need A New Flag?</a></h1></div> 
 	
 	<div class="grid-item grid-item-7"7 <h2><a href="https://buchanan.org/blog/the-dc-statehood-power-grab-149601">
-		Will DC fall?</a></h2> <br> <a href="https://buchanan.org/blog/does-our-diversity-portend-disintegration-149674"> Buchanan Sees the Decline and Fall</a> </br> </div> 
+		If DC gets statehood ?</a></h2> <br> <a href="https://buchanan.org/blog/does-our-diversity-portend-disintegration-149674"> Buchanan Sees the Decline and Fall</a> </br> </div> 
 	<div class="grid-item grid-item-8"8 <h2><a href="https://pq.org">The Parti Quebecois: North America's first elected separatist party (pardon le French)</a></h2></div> 
 	<a href="mailto:nationalnewsline@mail.com">contact: Nationalnewsline</a>
 	<div class="grid-item grid-item-8"><img src="/mynewssite2.html/img_3797.jpg" width="200" height="200">
