--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 	<div class="grid-item grid-item-8"8 <h2><a href="https://pq.org">The Parti Quebecois: North America's first elected separatist party (pardon le French)</a></h2></div> 
 	
 	<a href="mailto:nationalnewsline@mail.com">contact: Nationalnewsline</a>
-	<div class="grid-item grid-item-8"><img src="/mynewssite2.html/img_3797.jpg" width="200" height="200">
-	<div class="grid-item grid-item-6"6 <h1><a href="https://thelapine.ca/harper-unveils-subtle-changes-to-canadian-flag/">Does Canada Need A New Flag?</a></h1></div> 
+	<div class="grid-item grid-item-9"9><img src="/mynewssite2.html/img_3797.jpg" width="200" height="200">
+	<div class="grid-item grid-item-10"10 <h1><a href="https://thelapine.ca/harper-unveils-subtle-changes-to-canadian-flag/">Does Canada Need A New Flag?</a></h1></div> 
 	
  </div>
 	
