--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		If DC gets statehood</a></h2> <br> <a href="https://buchanan.org/blog/does-our-diversity-portend-disintegration-149674"> Buchanan Sees the Decline and Fall of the US</a> </br> </div> 
 	<div class="grid-item grid-item-8"8 <h2><a href="https://pq.org">The Parti Quebecois: North America's first elected separatist party (pardon le French)</a></h2></div> 
 	
-<div><a href="mailto:nationalnewsline@mail.com">contact: Nationalnewsline</a></div>
+<a href="mailto:nationalnewsline@mail.com">contact: Nationalnewsline</a>
 	<div class="grid-item grid-item-9"9><img src="/mynewssite2.html/img_3797.jpg" width="200" height="200">
 	<div class="grid-item grid-item-10"10 <h1><a href="https://thelapine.ca/harper-unveils-subtle-changes-to-canadian-flag/">Does Canada Need A New Flag?</a></h1></div> 
 	
