--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	<div class="grid-item grid-item-10"10><img src="/mynewssite2.html/img_3797.jpg" width="200" height="200"></div>
 
 	<a href="mailto:nationalnewsline@mail.com">contact: Nationalnewsline</a>
-	
+	<div class="grid-item grid-item-10"10><img src="/mynewssite2.html/img_3797.jpg" width="200" height="200"></div>
 	
  </div>
 	
