--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	<div class="grid-item grid-item-10"10><img src="/mynewssite2.html/img_3797.jpg" width="200" height="200"></div>
 	
 <p>Which country will collapse first, Canada or the US? We want to hear your viewpoint</p>
-	<a href="mailto:nationalnewsline@mail.com">contact: Nationalnewsline</a>
+	<a <p>Which country will collapse first, Canada or the US? We want to hear your viewpoint</p> href="mailto:nationalnewsline@mail.com">contact: Nationalnewsline</a>
 	<div class="grid-item grid-item-11"11><a href="https://vancouversun.com/news/staff-blogs/the-dangers-of-trudeaus-postnational-canada">Canada:The Post-National State</a></div>
 	
 </div>	
