--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	<div class="grid-item grid-item-9"9 <h1><a href="https://thelapine.ca/harper-unveils-subtle-changes-to-canadian-flag/">Does Canada Need A New Flag?</a></h1></div> 
 	<div class="grid-item grid-item-10"10><img src="/mynewssite2.html/img_3797.jpg" width="200" height="200"></div>
 	
-	<div class="grid-item grid-item-11"11<h3>Which country will collapse first, Canada or the US? We want to hear your viewpoint</p><a href="mailto:nationalnewsline@mail.com">contact: Nationalnewsline</a></div>
+	<div class="grid-item grid-item-11"11<h3><p Which country will collapse first, Canada or the US? We want to hear your viewpoint</p><a href="mailto:nationalnewsline@mail.com">contact: Nationalnewsline</a></div>
 	<div class="grid-item grid-item-12"12><a href="https://vancouversun.com/news/staff-blogs/the-dangers-of-trudeaus-postnational-canada">Canada:The Post-National State</a></div>
 	
 </div>	
