--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <p>
     <button type="submit">Send</button>
   </p>
-</form>....<a href="mailto:nationalnewsline@mail.com">contact: Nationalnewsline</a></div>
+</form>.....<a href="mailto:nationalnewsline@mail.com">contact: Nationalnewsline</a></div>
 	<div class="grid-item grid-item-12"12><a href="https://vancouversun.com/news/staff-blogs/the-dangers-of-trudeaus-postnational-canada">Canada:The Post-National State</a></div>
 	 
 	<img src="/mynewssite2/8FA71764-10B4-4194-9B43-0EE7C2C58E4F-1-192x143-0.png" width="50" height="50" alt= "my new pic"/>
