--- a/index.html
+++ b/index.html
@@ -43,17 +43,30 @@
 	<div class="grid-item grid-item-9"9 <h1><a href="https://thelapine.ca/harper-unveils-subtle-changes-to-canadian-flag/">Does Canada Need A New Flag?</a></h1></div> 
 	<div class="grid-item grid-item-10"10> <img src="vinsent-alexandro-I9wrc3V69VE-unsplash.jpg"></div> 
 	
-	<div class="grid-item grid-item-11"11<h3><p> Which country will collapse first, Canada or the US? We want to hear your viewpoint..<form name="dogPictures" method="POST" data-netlify="true">
-  <p>
-    <label>Dog’s Name: <input type="text" name="name" /></label>   
-  </p>
-  <p>
-    <label>Dog’s Picture: <input type="file" name="picture" /></label>
-  </p>
-  <p>
-    <button type="submit">Send</button>
-  </p>
-</form>...<a href="mailto:nationalnewsline@mail.com">contact: Nationalnewsline</a></div>
+	<div class="grid-item grid-item-11"11<h3><p> Which country will collapse first, Canada or the US? We want to hear your viewpoint..<form name="simpleContactForm" method="POST" id="simple-contact-form" class="contact-form">
+    <p class="form-row">
+        <label id="contact-form-name-label" for="contact-form-name" class="form-label">Name</label>
+        <input type="text" name="name" id="contact-form-name" aria-labelledby="contact-form-name-label" class="form-input" />
+    </p>
+    <p class="form-row">
+        <label id="contact-form-email-label" for="contact-form-email" class="form-label">Email address</label>
+        <input type="email" name="email" id="contact-form-email" aria-labelledby="contact-form-email-label" class="form-input" />
+    </p>
+    <p class="form-row">
+        <label id="contact-form-message-label" for="contact-form-message" class="form-label">Message</label>
+        <textarea
+            name="message"
+            id="contact-form-message"
+            aria-labelledby="contact-form-message-label"
+            class="form-textarea"
+            rows="7"
+        ></textarea>
+    </p>
+    <p class="form-row form-submit">
+        <button type="submit" class="button">Send Message</button>
+    </p>
+</form>
+...<a href="mailto:nationalnewsline@mail.com">contact: Nationalnewsline</a></div>
 	<div class="grid-item grid-item-12"12><a href="https://vancouversun.com/news/staff-blogs/the-dangers-of-trudeaus-postnational-canada">Canada:The Post-National State</a></div>
 	 
 	<img src="/mynewssite2/8FA71764-10B4-4194-9B43-0EE7C2C58E4F-1-192x143-0.png" width="50" height="50" alt= "my new pic"/>
