--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
 	<div class="grid-item grid-item-10"10> <img src="vinsent-alexandro-I9wrc3V69VE-unsplash.jpg"></div> 
 	
 	<div class="grid-item grid-item-11"11<h3><p> Which country will collapse first, Canada or the US? We want to hear your viewpoint..<form name="contact" method="POST" data-netlify="true">
-  <p>
+  /*<p>
     <label>Your Name: <input type="text" name="name" /></label>   
-  </p>
+  </p>*/
   <p>
-    <label>Your Email: <input type="email" name="email" /></label>
+    <label>Your Email: (optional)<input type="email" name="email" /></label>
   </p>
   <p>
     <label>Your Role: <select name="role[]" multiple>
