--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
 	<div class="grid-item grid-item-9"9 <h1><a href="https://thelapine.ca/harper-unveils-subtle-changes-to-canadian-flag/">Does Canada Need A New Flag?</a></h1></div> 
 	<div class="grid-item grid-item-10"10> <img src="vinsent-alexandro-I9wrc3V69VE-unsplash.jpg"></div> 
 	
-	<div class="grid-item grid-item-11"11<h3><p> Which country will collapse first, Canada or the US? We want to hear your viewpoint..<form name="contact" method="POST" data-netlify="true">
+	<div class="grid-item grid-item-11"11<h3><p> Which country will collapse first, Canada or the US? We want to hear your viewpoint<form name="contact" method="POST" data-netlify="true">
   
   <p>
-    <label>Your Email: (optional)<input type="email" name="email" /></label>
+    <label>Your Email: (optional) <input type="email" name="email" /></label>
   </p>
  
   <p>
@@ -56,7 +56,7 @@
     <button type="submit">Send</button>
   </p>
 </form>
-...<a href="mailto:nationalnewsline@mail.com">contact: Nationalnewsline</a></div>
+<a href="mailto:nationalnewsline@mail.com">contact: Nationalnewsline</a></div>
 	<div class="grid-item grid-item-12"12><a href="https://vancouversun.com/news/staff-blogs/the-dangers-of-trudeaus-postnational-canada">Canada:The Post-National State</a></div>
 	 
 	<img src="/mynewssite2/8FA71764-10B4-4194-9B43-0EE7C2C58E4F-1-192x143-0.png" width="50" height="50" alt= "my new pic"/>
