--- a/index.html
+++ b/index.html
@@ -56,11 +56,10 @@
     <button type="submit">Send</button>
   </p>
 </form>
-	<div class="grid-item grid-item-12"12> <img src="vinsent-alexandro-I9wrc3V69VE-unsplash.jpg"></div>
+	<div class="grid-item grid-item-12"12> <a href="mailto:nationalnewsline@mail.com">contact: Nationalnewsline</a></div></div>
 	 
 </div>	
 
-<a href="mailto:nationalnewsline@mail.com">contact: Nationalnewsline</a></div>
 
 </body>
 </html>
