--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 	<div class="grid-item grid-item-12"12> <a href="mailto:nationalnewsline@mail.com">contact: Nationalnewsline</a></div></div>
 	 
 </div>	
-<img src="IMG_3986.JPG/>
+<img src="IMG_3986.JPG>
 
 </body>
 </html>
