--- a/index.html
+++ b/index.html
@@ -49,14 +49,16 @@
   <p>
     <label>Your Email: (optional) <input type="email" name="email" /></label>
   </p>
- 		
+ 
   <p>
     <label>Message: <textarea name="message"></textarea></label>
   </p>
   <p>
     <button type="submit">Send</button>
   </p>
-</form>
+
+
+<form
 	<div class="grid-item grid-item-12"12> <a href="mailto:nationalnewsline@mail.com">contact: Nationalnewsline</a></div></div>
 	 
 </div>	
