--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
     <button type="submit">Send</button>
   </p>
 
+</form>
 
 <form
 	<div class="grid-item grid-item-12"12> <a href="mailto:nationalnewsline@mail.com">contact: Nationalnewsline</a></div></div>
