--- a/index.html
+++ b/index.html
@@ -59,8 +59,12 @@
 
 </form>
 
-<form
+<textarea type = "text" class ="input-field textarea-field" placeholder="your info here"></textarea>
+
+<form>
 	<div class="grid-item grid-item-12"12> <a href="mailto:nationalnewsline@mail.com">contact: Nationalnewsline</a></div></div>
+
+</form>
 	 
 </div>	
 
