--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 </form>
 
-<textarea type = "text" class ="input-field textarea-field" placeholder="your info here"></textarea>
+<textarea type = "text" class ="input-field textarea-field" placeholder="your reply here"></textarea>
 
 <form>
 	<div class="grid-item grid-item-12"12> <a href="mailto:nationalnewsline@mail.com">contact: Nationalnewsline</a></div></div>
