--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	<div class="grid-item grid-item-8"8 <h2><a href="https://pq.org">The Parti Quebecois: North America's first elected separatist party (pardon le French)</a></h2></div> 
 	
 	<div class="grid-item grid-item-9"9 <h1><a href="https://thelapine.ca/harper-unveils-subtle-changes-to-canadian-flag/">Does Canada Need A New Flag?</a></h1></div> 
-	<div class="grid-item grid-item-10"10><a href="https://vancouversun.com/news/staff-blogs/the-dangers-of-trudeaus-postnational-canada">Canada:The Post-National State</a> </div> 
+	<div class="grid-item grid-item-10"10><a href="https://vancouversun.com/news/staff-blogs/the-dangers-of-trudeaus-postnational-canada">Canada:The Post-National State<<<<<<<<kmdmkmmkdmkcdmkdkmdckmdckmmkdkmcdkmdckcskeijewoiewfioewfjnfjefwijewfijfenknkidsnwfenefwndsdsnkfweninefnehoewhirfewiorfhewiohrewhfrhoewfhewfehfefewiefhiewifew</a> </div> 
 	
 	<div class="grid-item grid-item-11"11<h3><p> Which country will collapse first, Canada or the US? We want to hear your viewpoint.<form name="contact" method="POST" data-netlify="true">
   
