--- a/index.html
+++ b/index.html
@@ -58,10 +58,13 @@
   <p>
     <button type="submit">Send</button>
   </p>
+	
 
 </form>
 
-<textarea type = "text" class ="input-field textarea-field" placeholder="your reply here"></textarea>
+<textarea type = "text" class ="input-field textarea-field" placeholder="your reply here"></textarea> 
+
+</div>
 
 <form>
 	<div class="grid-item grid-item-12"12> <a href="mailto:nationalnewsline@mail.com">contact: Nationalnewsline</a></div></div>
