--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	<div class="grid-item grid-item-9"9 <h1><a href="https://thelapine.ca/harper-unveils-subtle-changes-to-canadian-flag/">Does Canada Need A New Flag?</a></h1></div> 
 	<div class="grid-item grid-item-10"10><a href="https://vancouversun.com/news/staff-blogs/the-dangers-of-trudeaus-postnational-canada">Canada:The Post-National State</a></div> 
 	
-	<div class="grid-item grid-item-11"11<h3><p> Canada or the US, which country will collapse first? We want to hear your viewpoint.<form name="contact" method="POST" data-netlify="true">
+	<div class="grid-item grid-item-11"11<h3><p> Canada or the US, which nation will collapse first? We want to hear your viewpoint.<form name="contact" method="POST" data-netlify="true">
   
   
 <!--
