--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 </div>
 
 <form>
-	<div class="grid-item grid-item-12"12> <a href="mailto:nationalnewsline@mail.com">contact: Nationalnewsline</a></div></div>
+	<div class="grid-item grid-item-12"12> <a href="mailto:nationalnewsline@mail.com">contact: Nationalnewsline</a></div>
 
 </form>
 	
