--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
   </p>
 -->
   
+</form>
 
 
 <textarea type = "text" class ="input-field textarea-field" placeholder="your reply here"></textarea> 
