--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   </p>
 -->
   
-</form>
+</form>.
 
 
 <textarea type = "text" class ="input-field textarea-field" placeholder="your reply here"></textarea> 
