--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   
 
 
-<textarea type = "text" class ="input-field textarea-field" placeholder="your reply here" name="name"></textarea> 
+<textarea type = "text" class ="input-field textarea-field" placeholder="your reply here" input type="text" name="name"></textarea> 
 
 
 <p>
