--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		If DC gets Statehood</a></h4> <a href="https://buchanan.org/blog/does-our-diversity-portend-disintegration-149674"> Buchanan Sees the Decline and Fall of the US</a></div> 
 	<div class="grid-item grid-item-8"8 <h2><a href="https://pq.org">The Parti Quebecois: North America's first elected separatist party (pardon le French)</a></h2></div> 
 	
-	<div class="grid-item grid-item-9"9 <h1><a href="https://thelapine.ca/harper-unveils-subtle-changes-to-canadian-flag/">Does Canada Need A New Flag?</a></h1><p> Canada or the US, which nation will collapse first? We want to hear your viewpoint. <form name="contact" method="POST" data-netlify="true">
+	<div class="grid-item grid-item-9"9 <p> Canada or the US, which nation will collapse first? We want to hear your viewpoint. <form name="contact" method="POST" data-netlify="true">
   
 
 
@@ -54,7 +54,7 @@
 </form>	</div> 
 	<div class="grid-item grid-item-10"10><a href="https://vancouversun.com/news/staff-blogs/the-dangers-of-trudeaus-postnational-canada">Canada:The Post-National State</a></div> 
 	
-	<div class="grid-item grid-item-11"11<h3><p> Canada or the US, which nation will collapse first? We want to hear your viewpoint.
+	<div class="grid-item grid-item-11"11<h3><p><h1><a href="https://thelapine.ca/harper-unveils-subtle-changes-to-canadian-flag/">Does Canada Need A New Flag?</a></h1> Canada or the US, which nation will collapse first? We want to hear your viewpoint.
 
 
 <form name="contact" method="POST" data-netlify="true">
