--- a/index.html
+++ b/index.html
@@ -54,20 +54,7 @@
 </form>	</div> 
 	<div class="grid-item grid-item-10"10><a href="https://vancouversun.com/news/staff-blogs/the-dangers-of-trudeaus-postnational-canada">Canada:The Post-National State</a></div> 
 	
-	<div class="grid-item grid-item-11"11<h3><p><h1><a href="https://thelapine.ca/harper-unveils-subtle-changes-to-canadian-flag/">Does Canada Need A New Flag?</a></h1> Canada or the US, which nation will collapse first? We want to hear your viewpoint.
-
-
-<form name="contact" method="POST" data-netlify="true">
-  
-
-
-<textarea type = "text" class ="input-field textarea-field" placeholder="your reply here"  name="contact"></textarea> 
-
-
-<p>
-    <button type="submit">Send</button>
-  </p>
-</form>	
+	<div class="grid-item grid-item-11"11<h3><p><h1><a href="https://thelapine.ca/harper-unveils-subtle-changes-to-canadian-flag/">Does Canada Need A New Flag?</a></h1>
 
 </div>
 
