--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	
 	<div class="grid-item grid-item-11"11<h1><p><a href="https://thelapine.ca/harper-unveils-subtle-changes-to-canadian-flag/">Does Canada Need A New Flag?</a></p></h1>
 
-</div>
+</div></div>
 
 
 	<div class="grid-item grid-item-12"12> <a href="mailto:nationalnewsline@mail.com">contact: Nationalnewsline</a></div>
@@ -70,5 +70,5 @@
 
 </body>
 </html>
-/
+
 
