--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <p>
     <button type="submit">Send</button>
   </p>
-</form>
+</form></div>
 	<div class="grid-item grid-item-10"10><a href="https://vancouversun.com/news/staff-blogs/the-dangers-of-trudeaus-postnational-canada">Canada:The Post-National State</a></div> 
 	
 	<div class="grid-item grid-item-11"11<h1><p><a href="https://thelapine.ca/harper-unveils-subtle-changes-to-canadian-flag/">Does Canada Need A New Flag?</a></p></h1>
