--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		If DC gets Statehood</a></h4> <a href="https://buchanan.org/blog/does-our-diversity-portend-disintegration-149674"> Buchanan Sees the Decline and Fall of the US</a></div> 
 	<div class="grid-item grid-item-8"8 <h2><a href="https://pq.org">The Parti Quebecois: North America's first elected separatist party (pardon le French)</a></h2></div> 
 	
-	<div class="grid-item grid-item-9"9 <p> <h2>The strange death of North America. Canada or the US, which nation will collapse first? We want to hear your viewpoint.></h2></p>
+	<div class="grid-item grid-item-9"9 <p> <h2>The strange death of North America. Canada or the US, which nation will collapse first? We want to hear your viewpoint.</h2></p>
 	
 	<form name="contact" method="POST" data-netlify="true">
 
