--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
 
 	<div class="grid-item grid-item-14"14> <a href="mailto:nationalnewsline@mail.com">contact: Nationalnewsline</a> </div> 
 
+</div>
+
 </body>
 </html>
 
