--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 </div>
 
 
-	<div class="grid-item grid-item-12"12>  THIS line is commented out to make room for text and form in DIV 9 <a href="mailto:nationalnewsline@mail.com">contact: Nationalnewsline</a>  </div> 
+	<div class="grid-item grid-item-12"12><a href="mailto:nationalnewsline@mail.com">contact: Nationalnewsline</a> </div> 
 
 
 	
