--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 </div>
 
 
-	<div class="grid-item grid-item-12"12><a href="mailto:nationalnewsline@mail.com">contact: Nationalnewsline</a> </div> 
+// keep this text as placeholder	<div class="grid-item grid-item-12"12> </div> 
 
 
 	
