--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	<div class="grid-item grid-item-6"6<h2><a href="https://www.msn.com/en-us/news/crime/atlanta-proposes-to-spend-16m-on-private-police-force-in-buckhead/ar-BB1ckAO6">Buckhead Atlanta to get Separate Police Force?</a><h/2></div>
 	
 <div class="grid-item grid-item-7"7 <p style="color:red;">Pat Buchanan </p> <h4><a href="https://buchanan.org/blog/the-dc-statehood-power-grab-149601">
-		If DC gets Statehood</a></h4> <a href="https://buchanan.org/blog/does-our-diversity-portend-disintegration-149674"> Buchanan Sees the Decline and Fall of the US</a></div> 
+		If DC gets Statehood</a></h4> <a href="https://buchanan.org/blog/does-our-diversity-portend-disintegration-149674"> <br> Buchanan Sees the Decline and Fall of the US</a></div> 
 	<div class="grid-item grid-item-8"8 <h2><a href="https://pq.org">The Parti Quebecois: North America's first elected separatist party (pardon le French)</a></h2></div> 
 	
 	<div class="grid-item grid-item-9"9 <p> <h2>The strange death of North America. Canada or the US, which nation will collapse first?</h2></p>
