--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 	
 
-	<div class="grid-item grid-item-13"13> <a href="https://www.youtube.com/watch?v=gSi3S3T8GEw&t=289s">To Live and Die in LA</a><br><br><br><br><a href="mailto:nationalnewsline@mail.com">contact: Nationalnewsline</a></div>	
+	<div class="grid-item grid-item-13"13> <a href="https://www.youtube.com/watch?v=gSi3S3T8GEw&t=289s">To Live and Die Young in LA</a><br><br><br><br><a href="mailto:nationalnewsline@mail.com">contact: Nationalnewsline</a></div>	
 
 
 </div>
