--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 </div>
 
 
- 	<div class="grid-item grid-item-12"12> PPPPPPtttt</div> 
+ 	<div class="grid-item grid-item-12"12> PPPPtttt</div> 
 
 
 	
