--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 	
 
-	<div class="grid-item grid-item-13"13><a href="https://buchanan.org/blog/does-our-diversity-portend-disintegration-149674"> TTT Buchanan Sees the Decline and Fall of the US</a><br><br><br><br><a href="mailto:nationalnewsline@mail.com">contact: Nationalnewsline</a></div>	
+	<div class="grid-item grid-item-13"13><a href="https://buchanan.org/blog/does-our-diversity-portend-disintegration-149674"> CCCC Buchanan Sees the Decline and Fall of the US</a><br><br><br><br><a href="mailto:nationalnewsline@mail.com">contact: Nationalnewsline</a></div>	
 
 
 </div>
