--- a/index.html
+++ b/index.html
@@ -56,17 +56,17 @@
 	<div class="grid-item grid-item-10"10><a href="https://vancouversun.com/news/staff-blogs/the-dangers-of-trudeaus-postnational-canada">Canada:JJThe Post-National State</a><h4><a href="https://buchanan.org/blog/the-dc-statehood-power-grab-149601">
 	If DC gets Statehood</a></h4></div> 
 	
-	<div class="grid-item grid-item-11"11<h1><p><a href="https://cis.org/Arthur/Border-Chaos-Gets-Worse-and-Will-Get-Worse-Yet">TTTTUUUCenter For Immigration Studies</a></p></h1>
+	<div class="grid-item grid-item-11"11<h1><p><a href="https://cis.org/Arthur/Border-Chaos-Gets-Worse-and-Will-Get-Worse-Yet">Center For Immigration Studies</a></p></h1>
 
 </div>
 
 
- 	<div class="grid-item grid-item-12"12> PPPPtttt</div> 
+ 	<div class="grid-item grid-item-12"12> </div> 
 
 
 	
 
-	<div class="grid-item grid-item-13"13><a href="https://buchanan.org/blog/does-our-diversity-portend-disintegration-149674"> CCCC Buchanan Sees the Decline and Fall of the US</a><br><br><br><br><a href="mailto:nationalnewsline@mail.com">contact: Nationalnewsline</a></div>	
+	<div class="grid-item grid-item-13"13><a href="https://buchanan.org/blog/does-our-diversity-portend-disintegration-149674">Buchanan Sees the Decline and Fall of the US</a><br><br><br><br><a href="mailto:nationalnewsline@mail.com">contact: Nationalnewsline</a></div>	
 
 
 </div>
