--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 </div>
 
 img src=
-<img src="Ann_Coulter_article_pic.png"> <img>
+<img src="Ann_Coulter_article_pic.png" width="200px" height="100px"> <img>
 
 </body>
 </html>
