--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 </div>
 
-<img src="Ann_Coulter_article_pic.png" width="200px" height="100px"> <img>
+<img src="20210927_113717.jpg" width="200px" height="100px"> <img>
 
 </body>
 </html>
